// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot test: all alarms 1`] = `
Object {
  "Outputs": Object {
    "DummyApiEndpoint2E6B19BE": Object {
      "Value": Object {
        "Fn::Join": Array [
          "",
          Array [
            "https://",
            Object {
              "Ref": "DummyApi80F1E171",
            },
            ".execute-api.",
            Object {
              "Ref": "AWS::Region",
            },
            ".",
            Object {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            Object {
              "Ref": "DummyApiDeploymentStageprod9EB3D152",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Resources": Object {
    "DummyApi80F1E171": Object {
      "Properties": Object {
        "Name": "DummyApi",
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "DummyApiANYCEB66499": Object {
      "Properties": Object {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": Object {
          "Type": "MOCK",
        },
        "ResourceId": Object {
          "Fn::GetAtt": Array [
            "DummyApi80F1E171",
            "RootResourceId",
          ],
        },
        "RestApiId": Object {
          "Ref": "DummyApi80F1E171",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "DummyApiAccount7A4341D1": Object {
      "DependsOn": Array [
        "DummyApi80F1E171",
      ],
      "Properties": Object {
        "CloudWatchRoleArn": Object {
          "Fn::GetAtt": Array [
            "DummyApiCloudWatchRole478A67A7",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
    },
    "DummyApiCloudWatchRole478A67A7": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "DummyApiDeploymentD01F5018548e3dba60631e60c80c03977ce1f18a": Object {
      "DependsOn": Array [
        "DummyApiANYCEB66499",
      ],
      "Properties": Object {
        "Description": "Automatically created by the RestApi construct",
        "RestApiId": Object {
          "Ref": "DummyApi80F1E171",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "DummyApiDeploymentStageprod9EB3D152": Object {
      "Properties": Object {
        "DeploymentId": Object {
          "Ref": "DummyApiDeploymentD01F5018548e3dba60631e60c80c03977ce1f18a",
        },
        "RestApiId": Object {
          "Ref": "DummyApi80F1E171",
        },
        "StageName": "prod",
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "ScopeTestDummyApiErrorCountWarning11BE36AF": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Error count is too high.",
        "AlarmName": "Test-DummyApi-Error-Count-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 22,
        "EvaluationPeriods": 22,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "4XX Error",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "ApiName",
                    "Value": "DummyApi",
                  },
                  Object {
                    "Name": "Stage",
                    "Value": "prod",
                  },
                ],
                "MetricName": "4XXError",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 300,
              "Stat": "Sum",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 0.02,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestDummyApiErrorRateWarningD181D1C6": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Error rate is too high.",
        "AlarmName": "Test-DummyApi-Error-Rate-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 11,
        "EvaluationPeriods": 11,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "4XX Error (avg)",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "ApiName",
                    "Value": "DummyApi",
                  },
                  Object {
                    "Name": "Stage",
                    "Value": "prod",
                  },
                ],
                "MetricName": "4XXError",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 300,
              "Stat": "Average",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 0.01,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestDummyApiFaultCountWarning6270BEC0": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Fault count is too high.",
        "AlarmName": "Test-DummyApi-Fault-Count-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 20,
        "EvaluationPeriods": 20,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "5XX Fault",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "ApiName",
                    "Value": "DummyApi",
                  },
                  Object {
                    "Name": "Stage",
                    "Value": "prod",
                  },
                ],
                "MetricName": "5XXError",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 300,
              "Stat": "Sum",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 2,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestDummyApiFaultRateWarning63CFB7F0": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Fault rate is too high.",
        "AlarmName": "Test-DummyApi-Fault-Rate-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 10,
        "EvaluationPeriods": 10,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "5XX Fault (avg)",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "ApiName",
                    "Value": "DummyApi",
                  },
                  Object {
                    "Name": "Stage",
                    "Value": "prod",
                  },
                ],
                "MetricName": "5XXError",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 300,
              "Stat": "Average",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestDummyApiLatencyP50Warning7EEB3E57": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "P50 latency is too high.",
        "AlarmName": "Test-DummyApi-Latency-P50-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 11,
        "EvaluationPeriods": 11,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "P50",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "ApiName",
                    "Value": "DummyApi",
                  },
                  Object {
                    "Name": "Stage",
                    "Value": "prod",
                  },
                ],
                "MetricName": "Latency",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 300,
              "Stat": "p50",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 110,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestDummyApiLatencyP90Warning48639A66": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "P90 latency is too high.",
        "AlarmName": "Test-DummyApi-Latency-P90-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 22,
        "EvaluationPeriods": 22,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "P90",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "ApiName",
                    "Value": "DummyApi",
                  },
                  Object {
                    "Name": "Stage",
                    "Value": "prod",
                  },
                ],
                "MetricName": "Latency",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 300,
              "Stat": "p90",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 220,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestDummyApiLatencyP99Warning254DA12C": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "P99 latency is too high.",
        "AlarmName": "Test-DummyApi-Latency-P99-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 33,
        "EvaluationPeriods": 33,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "P99",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "ApiName",
                    "Value": "DummyApi",
                  },
                  Object {
                    "Name": "Stage",
                    "Value": "prod",
                  },
                ],
                "MetricName": "Latency",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 300,
              "Stat": "p99",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 330,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestDummyApiMaxTPSWarning62732F2B": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "TPS is too high.",
        "AlarmName": "Test-DummyApi-MaxTPS-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 3,
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Expression": "FILL(requests,0) / PERIOD(requests)",
            "Id": "expr_1",
            "Label": "Count/s",
          },
          Object {
            "Id": "requests",
            "Label": "Count",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "ApiName",
                    "Value": "DummyApi",
                  },
                  Object {
                    "Name": "Stage",
                    "Value": "prod",
                  },
                ],
                "MetricName": "Count",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 300,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
        ],
        "Threshold": 10,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestDummyApiMinTPSWarning4E8DB4D0": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "TPS is too low.",
        "AlarmName": "Test-DummyApi-MinTPS-Warning",
        "ComparisonOperator": "LessThanThreshold",
        "DatapointsToAlarm": 3,
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Expression": "FILL(requests,0) / PERIOD(requests)",
            "Id": "expr_1",
            "Label": "Count/s",
          },
          Object {
            "Id": "requests",
            "Label": "Count",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "ApiName",
                    "Value": "DummyApi",
                  },
                  Object {
                    "Name": "Stage",
                    "Value": "prod",
                  },
                ],
                "MetricName": "Count",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 300,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
        ],
        "Threshold": 1,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
}
`;

exports[`snapshot test: all alarms without alarmFriendlyName 1`] = `
Object {
  "Outputs": Object {
    "DummyApiEndpoint2E6B19BE": Object {
      "Value": Object {
        "Fn::Join": Array [
          "",
          Array [
            "https://",
            Object {
              "Ref": "DummyApi80F1E171",
            },
            ".execute-api.",
            Object {
              "Ref": "AWS::Region",
            },
            ".",
            Object {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            Object {
              "Ref": "DummyApiDeploymentStageprod9EB3D152",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Resources": Object {
    "DummyApi80F1E171": Object {
      "Properties": Object {
        "Name": "DummyApi",
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "DummyApiANYCEB66499": Object {
      "Properties": Object {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": Object {
          "Type": "MOCK",
        },
        "ResourceId": Object {
          "Fn::GetAtt": Array [
            "DummyApi80F1E171",
            "RootResourceId",
          ],
        },
        "RestApiId": Object {
          "Ref": "DummyApi80F1E171",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "DummyApiAccount7A4341D1": Object {
      "DependsOn": Array [
        "DummyApi80F1E171",
      ],
      "Properties": Object {
        "CloudWatchRoleArn": Object {
          "Fn::GetAtt": Array [
            "DummyApiCloudWatchRole478A67A7",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
    },
    "DummyApiCloudWatchRole478A67A7": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "DummyApiDeploymentD01F5018548e3dba60631e60c80c03977ce1f18a": Object {
      "DependsOn": Array [
        "DummyApiANYCEB66499",
      ],
      "Properties": Object {
        "Description": "Automatically created by the RestApi construct",
        "RestApiId": Object {
          "Ref": "DummyApi80F1E171",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "DummyApiDeploymentStageprod9EB3D152": Object {
      "Properties": Object {
        "DeploymentId": Object {
          "Ref": "DummyApiDeploymentD01F5018548e3dba60631e60c80c03977ce1f18a",
        },
        "RestApiId": Object {
          "Ref": "DummyApi80F1E171",
        },
        "StageName": "prod",
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "ScopeTestDummyApiprodGETdummyresourceErrorCountWarningAF0226A6": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Error count is too high.",
        "AlarmName": "Test-DummyApi-prod-GET-dummyresource-Error-Count-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 22,
        "EvaluationPeriods": 22,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "4XX Error",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "ApiName",
                    "Value": "DummyApi",
                  },
                  Object {
                    "Name": "Method",
                    "Value": "GET",
                  },
                  Object {
                    "Name": "Resource",
                    "Value": "dummy/resource",
                  },
                  Object {
                    "Name": "Stage",
                    "Value": "prod",
                  },
                ],
                "MetricName": "4XXError",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 300,
              "Stat": "Sum",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 0.02,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestDummyApiprodGETdummyresourceErrorRateWarning016C3EC5": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Error rate is too high.",
        "AlarmName": "Test-DummyApi-prod-GET-dummyresource-Error-Rate-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 11,
        "EvaluationPeriods": 11,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "4XX Error (avg)",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "ApiName",
                    "Value": "DummyApi",
                  },
                  Object {
                    "Name": "Method",
                    "Value": "GET",
                  },
                  Object {
                    "Name": "Resource",
                    "Value": "dummy/resource",
                  },
                  Object {
                    "Name": "Stage",
                    "Value": "prod",
                  },
                ],
                "MetricName": "4XXError",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 300,
              "Stat": "Average",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 0.01,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestDummyApiprodGETdummyresourceFaultCountWarning17579B91": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Fault count is too high.",
        "AlarmName": "Test-DummyApi-prod-GET-dummyresource-Fault-Count-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 20,
        "EvaluationPeriods": 20,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "5XX Fault",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "ApiName",
                    "Value": "DummyApi",
                  },
                  Object {
                    "Name": "Method",
                    "Value": "GET",
                  },
                  Object {
                    "Name": "Resource",
                    "Value": "dummy/resource",
                  },
                  Object {
                    "Name": "Stage",
                    "Value": "prod",
                  },
                ],
                "MetricName": "5XXError",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 300,
              "Stat": "Sum",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 2,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestDummyApiprodGETdummyresourceFaultRateWarning1991C1B6": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Fault rate is too high.",
        "AlarmName": "Test-DummyApi-prod-GET-dummyresource-Fault-Rate-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 10,
        "EvaluationPeriods": 10,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "5XX Fault (avg)",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "ApiName",
                    "Value": "DummyApi",
                  },
                  Object {
                    "Name": "Method",
                    "Value": "GET",
                  },
                  Object {
                    "Name": "Resource",
                    "Value": "dummy/resource",
                  },
                  Object {
                    "Name": "Stage",
                    "Value": "prod",
                  },
                ],
                "MetricName": "5XXError",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 300,
              "Stat": "Average",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestDummyApiprodGETdummyresourceLatencyP50Warning988CD8FE": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "P50 latency is too high.",
        "AlarmName": "Test-DummyApi-prod-GET-dummyresource-Latency-P50-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 11,
        "EvaluationPeriods": 11,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "P50",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "ApiName",
                    "Value": "DummyApi",
                  },
                  Object {
                    "Name": "Method",
                    "Value": "GET",
                  },
                  Object {
                    "Name": "Resource",
                    "Value": "dummy/resource",
                  },
                  Object {
                    "Name": "Stage",
                    "Value": "prod",
                  },
                ],
                "MetricName": "Latency",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 300,
              "Stat": "p50",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 110,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestDummyApiprodGETdummyresourceLatencyP90Warning7B53F4CE": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "P90 latency is too high.",
        "AlarmName": "Test-DummyApi-prod-GET-dummyresource-Latency-P90-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 22,
        "EvaluationPeriods": 22,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "P90",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "ApiName",
                    "Value": "DummyApi",
                  },
                  Object {
                    "Name": "Method",
                    "Value": "GET",
                  },
                  Object {
                    "Name": "Resource",
                    "Value": "dummy/resource",
                  },
                  Object {
                    "Name": "Stage",
                    "Value": "prod",
                  },
                ],
                "MetricName": "Latency",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 300,
              "Stat": "p90",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 220,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestDummyApiprodGETdummyresourceLatencyP99Warning8EE55673": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "P99 latency is too high.",
        "AlarmName": "Test-DummyApi-prod-GET-dummyresource-Latency-P99-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 33,
        "EvaluationPeriods": 33,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "P99",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "ApiName",
                    "Value": "DummyApi",
                  },
                  Object {
                    "Name": "Method",
                    "Value": "GET",
                  },
                  Object {
                    "Name": "Resource",
                    "Value": "dummy/resource",
                  },
                  Object {
                    "Name": "Stage",
                    "Value": "prod",
                  },
                ],
                "MetricName": "Latency",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 300,
              "Stat": "p99",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 330,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestDummyApiprodGETdummyresourceMaxTPSWarning864CD950": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "TPS is too high.",
        "AlarmName": "Test-DummyApi-prod-GET-dummyresource-MaxTPS-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 3,
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Expression": "FILL(requests,0) / PERIOD(requests)",
            "Id": "expr_1",
            "Label": "Count/s",
          },
          Object {
            "Id": "requests",
            "Label": "Count",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "ApiName",
                    "Value": "DummyApi",
                  },
                  Object {
                    "Name": "Method",
                    "Value": "GET",
                  },
                  Object {
                    "Name": "Resource",
                    "Value": "dummy/resource",
                  },
                  Object {
                    "Name": "Stage",
                    "Value": "prod",
                  },
                ],
                "MetricName": "Count",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 300,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
        ],
        "Threshold": 10,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestDummyApiprodGETdummyresourceMinTPSWarning8ED5EFE3": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "TPS is too low.",
        "AlarmName": "Test-DummyApi-prod-GET-dummyresource-MinTPS-Warning",
        "ComparisonOperator": "LessThanThreshold",
        "DatapointsToAlarm": 3,
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Expression": "FILL(requests,0) / PERIOD(requests)",
            "Id": "expr_1",
            "Label": "Count/s",
          },
          Object {
            "Id": "requests",
            "Label": "Count",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "ApiName",
                    "Value": "DummyApi",
                  },
                  Object {
                    "Name": "Method",
                    "Value": "GET",
                  },
                  Object {
                    "Name": "Resource",
                    "Value": "dummy/resource",
                  },
                  Object {
                    "Name": "Stage",
                    "Value": "prod",
                  },
                ],
                "MetricName": "Count",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 300,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
        ],
        "Threshold": 1,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
}
`;

exports[`snapshot test: no alarms 1`] = `
Object {
  "Outputs": Object {
    "DummyApiEndpoint2E6B19BE": Object {
      "Value": Object {
        "Fn::Join": Array [
          "",
          Array [
            "https://",
            Object {
              "Ref": "DummyApi80F1E171",
            },
            ".execute-api.",
            Object {
              "Ref": "AWS::Region",
            },
            ".",
            Object {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            Object {
              "Ref": "DummyApiDeploymentStageprod9EB3D152",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Resources": Object {
    "DummyApi80F1E171": Object {
      "Properties": Object {
        "Name": "DummyApi",
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "DummyApiANYCEB66499": Object {
      "Properties": Object {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": Object {
          "Type": "MOCK",
        },
        "ResourceId": Object {
          "Fn::GetAtt": Array [
            "DummyApi80F1E171",
            "RootResourceId",
          ],
        },
        "RestApiId": Object {
          "Ref": "DummyApi80F1E171",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "DummyApiAccount7A4341D1": Object {
      "DependsOn": Array [
        "DummyApi80F1E171",
      ],
      "Properties": Object {
        "CloudWatchRoleArn": Object {
          "Fn::GetAtt": Array [
            "DummyApiCloudWatchRole478A67A7",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
    },
    "DummyApiCloudWatchRole478A67A7": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "DummyApiDeploymentD01F5018548e3dba60631e60c80c03977ce1f18a": Object {
      "DependsOn": Array [
        "DummyApiANYCEB66499",
      ],
      "Properties": Object {
        "Description": "Automatically created by the RestApi construct",
        "RestApiId": Object {
          "Ref": "DummyApi80F1E171",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "DummyApiDeploymentStageprod9EB3D152": Object {
      "Properties": Object {
        "DeploymentId": Object {
          "Ref": "DummyApiDeploymentD01F5018548e3dba60631e60c80c03977ce1f18a",
        },
        "RestApiId": Object {
          "Ref": "DummyApi80F1E171",
        },
        "StageName": "prod",
      },
      "Type": "AWS::ApiGateway::Stage",
    },
  },
}
`;
